# Ai-Estimator

./: .gitignore  README.md  pyproject.toml  sample_output.json
ai_estimator/: benchmark.py  benchmark_compare.py  constants.py  main.py  pipeline.py  sheet_overrides.py  trade_scope.py
ai_estimator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
benchmarks/: README.md  manifest.example.json
config/: pip.conf.example  pip.ini.example
desktop/: __init__.py  app.py
docs/: architecture.md  dependency-management.md
requirements/: dev.in  dev.lock.txt  runtime.in  runtime.lock.txt
scripts/: benchmark-gate.bat  benchmark-gate.ps1  quickstart.bat  quickstart.ps1  run-api.bat  run-api.ps1  run-desktop.bat  run-desktop.ps1  run-full-stack.bat  run-full-stack.ps1  setup-dev.ps1  smoke-job.bat  smoke-job.ps1  update-locks.ps1
service/: __init__.py  app.py  job_metrics.py  job_store.py  request_parsing.py  review_queue.py  run_api.py  trade_coverage.py  trade_recommendation.py
tests/: test_analysis_scope_validation.py  test_benchmark_compare_cli.py  test_benchmark_report_compare.py  test_benchmark_scoring.py  test_desktop_trade_scope_validation.py  test_geometry_extraction.py  test_job_auto_prune.py  test_job_backlog_limit.py  test_job_metrics.py  test_job_store.py  test_job_worker_limit.py  test_legend_symbols.py  test_pdf_loader_quality.py  test_pipeline_shape.py  test_pipeline_sheet_id_inference.py  test_pipeline_sheet_id_source_output.py  test_request_parsing.py  test_rerun_logic.py  test_review_queue.py  test_scale_analyzer.py  (+21 more)
(+13 files in other folders)
