[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-estimator"
version = "0.1.0"
description = "Construction drawing PDF to structured takeoff data pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "jsonschema>=4.0.0",
  "pypdf>=4.0.0",
  "python-multipart>=0.0.9",
  "requests>=2.32.0",
  "uvicorn>=0.30.0"
]

[project.scripts]
ai-estimator = "ai_estimator.main:main"
ai-estimator-benchmark = "ai_estimator.benchmark:main"
ai-estimator-api = "service.run_api:main"
ai-estimator-desktop = "desktop.app:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[tool.setuptools.packages.find]
include = ["ai_estimator*", "service*", "desktop*"]
